# coffeebreak-cli

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff_report.txt  setup.py
.github/workflows/: ci.yml
coffeebreak/: __init__.py  cli.py
coffeebreak/backup/: __init__.py  manager.py  recovery.py  scheduler.py  storage.py
coffeebreak/config/: __init__.py  manager.py  schemas.py  validator.py
coffeebreak/containers/: __init__.py  compose.py  dependencies.py  health.py  manager.py
coffeebreak/environments/: __init__.py  automation.py  detector.py  development.py  plugin.py  production.py  python_env.py
coffeebreak/git/: __init__.py  operations.py  validation.py
coffeebreak/infrastructure/: __init__.py  deployment.py  maintenance.py  manager.py  scaling.py
coffeebreak/monitoring/: __init__.py  alerts.py  logs.py  manager.py  metrics.py
coffeebreak/plugins/: __init__.py  builder.py  creator.py  dependencies.py  devtools.py  documentation.py  hotreload.py  integration.py  testing.py  validator.py
coffeebreak/secrets/: __init__.py  generator.py  manager.py  rotation.py
coffeebreak/ssl/: __init__.py  letsencrypt.py  manager.py
coffeebreak/templates/: __init__.py  coffeebreak-plugin.yml.j2  coffeebreak.yml.j2  docker-compose.production.yml.j2  env.production.j2  keycloak.py  nginx.conf.j2  systemd.service.j2
coffeebreak/utils/: __init__.py  errors.py  files.py  logging.py  npm.py
coffeebreak/validation/: __init__.py  health.py  security.py  validator.py
man/man1/: coffeebreak.1
tests/: __init__.py  conftest.py  test_cli_commands.py  test_config.py  test_error_handling.py  test_file_operations.py  test_git_operations.py
(+2 files in other folders)
