[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".pytest_cache",
]

[tool.ruff.lint]
# Focus on real issues, not style preferences
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "W",      # pycodestyle warnings  
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (likely bugs)
    "C90",    # mccabe (complexity)
    "N",      # pep8-naming
    "TID",    # flake8-tidy-imports
]

ignore = [
    "N806",   # non-lowercase variable in function (DB, ID, etc. are fine)
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Reasonable complexity limit

[tool.ruff.lint.isort]
known-first-party = ["coffeebreak"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N"]  # Less strict in tests
"setup.py" = ["T201"]   # Allow print in setup

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["docker.*", "git.*", "yaml.*", "jinja2.*", "cryptography.*"]
ignore_missing_imports = true

[project]
name = "coffeebreak"
version = "0.1.0"
description = "CoffeeBreak CLI"
dependencies = [
    # your runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "watchdog",
    # add other dev dependencies here
]
